# H-llbarhetskollen

./: CONTRIBUTING.md  README.md  app.db  create_user.html  index.html  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  styles.css
app/: bootstrap_db.py  db.py  import_emission_factors.py  models.py  schemas.py
app/services/: emissions.py
data/: emission_factors.csv
docs/: project_pm.md  rubric.md  user_stories.md
docs/templates/: backlog_template.md  definition_of_done.md  presentation_checklist.md  rapportmall.md  retro_template.md  risklogg_template.md  sprint_plan_template.md
it_projektmetodik.egg-info/: PKG-INFO  SOURCES.txt
scripts/: check_sources.py
templates/: activities.html  base.html  weekly.html
tests/: conftest.py  test_api.py  test_emissions.py
