[tool.ruff]
line-length = 100
target-version = "py311"
# En “lagom” regeluppsättning för ÅK1:
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]  # line length hanteras pragmatiskt i början

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "it-projektmetodik"
version = "0.1.0"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
